Fri Nov 28 10:47:11 1997  Scott Christley  <scottc@net-community.com>

	* common.make (GNUSTEP_INSTALLATION_DIR): If the default
	GNUSTEP_LOCAL_ROOT is empty then use GNUSTEP_SYSTEM_ROOT.
	(GNUSTEP_LOCAL_HEADERS_FLAG, GNUSTEP_USER_HEADERS_FLAG): New variable.
	(GNUSTEP_LOCAL_TARGET_LIBRARIES_FLAG): New variable.
	(GNUSTEP_LOCAL_LIBRARIES_FLAG): New variable.
	(GNUSTEP_USER_TARGET_LIBRARIES_FLAG): New variable.
	(GNUSTEP_USER_LIBRARIES_FLAG): New variable.
	In places where GNUSTEP_LOCAL_ROOT and GNUSTEP_USER_ROOT are
	used, check to see if they are not blank before using them.
	(GNUSTEP_FND_DIR): Change to just gnustep.
	* objc.make (OBJC_PROGRAM_INSTALLATION_DIR): Add the target
	subdirectory path.
	(objc-program): Change to objc_program for target names.
	* rules.make (ALL_OBJCFLAGS, ALL_CFLAGS): Use flag variables
	for local and user header directories in case they are blank.
	(ALL_LIB_DIRS, LIB_DIRS_NO_SYSTEM): Likewise.

Wed Nov 19 13:07:37 1997  Scott Christley  <scottc@net-community.com>

	* COPYING: New file.
	* config.site: Escape $ characters.

Wed Nov 19 10:58:28 1997  Ovidiu Predescu <ovidiu@net-community.com>

	* debugapp.in: Changed library_combo variable to LIBRARY_COMBO.
	* tool.make: When installing take the tool from GNUSTEP_OBJ_DIR.

Mon Nov 17 13:05:44 1997  Ovidiu Predescu <ovidiu@net-community.com>

	* application.make: Output the file containing the paths for the
	dynamic linker for each library combo instead of a global file for all
	the combinations.
	* openapp.in: Support the above change.
	* debugapp.in: Likewise.
	* rules.m (ALL_OBJCFLAGS, ALL_CFLAGS): Remove unnecessary -I.

Fri Nov 14 12:51:16 1997  Scott Christley  <scottc@net-community.com>

	* test-application.make: New file.
	* test-tool.make: New file.
	* GNUmakefile.in: Install new files.
	* aggregate.make: Prevent multiple inclusions.
	* application.make: Likewise.
	* bundle.make: Likewise.
	* library.make: Likewise.
	* objc.make: Likewise.
	* rules.make: Likewise.