@@ -50,16 +50,6 @@ case "$host_os" in
     export DYLD_LIBRARY_PATH
     ;;
 
-  *solaris*)
-    LD_LIBRARY_PATH="$GNUSTEP_USER_ROOT/$last_path_part;$GNUSTEP_LOCAL_ROOT/$last_path_part;$GNUSTEP_SYSTEM_ROOT/$last_path_part;$LD_LIBRARY_PATH"
-    if [ -n "$additional_library_paths" ]; then
-      for dir in $additional_library_paths; do
-	additional="${additional}${dir};"
-      done
-    fi
-    LD_LIBRARY_PATH="${additional}${LD_LIBRARY_PATH}"
-    export LD_LIBRARY_PATH;;
-
   *)
     LD_LIBRARY_PATH="$GNUSTEP_USER_ROOT/$last_path_part:$GNUSTEP_LOCAL_ROOT/$last_path_part:$GNUSTEP_SYSTEM_ROOT/$last_path_part:$LD_LIBRARY_PATH"
     if [ -n "$additional_library_paths" ]; then
